--- a/css/mogujie.scss
+++ b/css/mogujie.scss
@@ -73,7 +73,7 @@ a{
 
 .banner{
 	width:100%;
-	height:num(126rem);
+	height:num(126rem+39rem);
 	img{
 		height:100%;
 		width:100%;
@@ -515,6 +515,6 @@ a{
 
 }
 .box{
-	margin-top:num(37rem);
+	
 	margin-bottom:num(45rem);
 }
